update readme.md and change ul and li to div element in html file

--- a/index.html
+++ b/index.html
@@ -119,25 +119,25 @@
     </main>
     <footer>
         <img class="logo__footer" src="images/logo.svg" alt="logo" />
-        <ul class="access__links">
+        <div class="access__links">
             <div>
-                <li><a class="access__link" href="#">FAQs</a></li>
-                <li><a class="access__link" href="#">Contact Us</a></li>
+                <a class="access__link" href="#">FAQs</a>
+                <a class="access__link" href="#">Contact Us</a>
             </div>
             <div>
-                <li><a class="access__link" href="#">Privacy Policy</a></li>
-                <li><a class="access__link" href="#">Press Kit</a></li>
+                <a class="access__link" href="#">Privacy Policy</a>
+                <a class="access__link" href="#">Press Kit</a>
             </div>
-            <li><a class="access__link" href="#">Install Guide</a></li>
-        </ul>
+            <a class="access__link" href="#">Install Guide</a>
+        </div>
         <div class="social__links">
-            <a class="social__link" href="#">
+            <a class="social__link" href="#" aria-label="facebook logo">
                 <img class="social__logo" src="images/icon-facebook.svg" alt="" />
             </a>
-            <a class="social__link" href="#">
+            <a class="social__link" href="#" aria-label="twitter logo">
                 <img class="social__logo" src="images/icon-twitter.svg" alt="" />
             </a>
-            <a class="social__link" href="#">
+            <a class="social__link" href="#" aria-label="instagram logo">
                 <img class="social__logo" src="images/icon-instagram.svg" alt="" />
             </a>
         </div>
